--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,47 @@
-　<!DOCTYPE html>
-　　<html>
-　　<head>
-　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　　　<title>{{ page.title }}</title>
-　　</head>
-　　<body>
+<!DOCTYPE html>
+<html>
 
-　　　　{{ content }}
-	hello gitpage!
+  <head>
+    <meta charset=utf-8 />
+    <title>
+      {% if page.title %} {{ page.title }} | {% endif %} 
+    </title>
+    <link rel="stylesheet" href="/css/styles.css" />
+  </head>
 
-　　</body>
-　　</html>
+  <body>
+    <div id="main">
+      <header>
+        <h1>
+          Good bai Blog
+        </h1>
+        <header>
+          <nav role="navigation">
+            <ul>
+              <li>
+                <a href="/"> Home </a>
+              </li>
+              <li>
+                <a href="/portfolio/"> Portfolio </a>
+              </li>
+              <li>
+                <a href="/about"> About </a>
+              </li>
+              <li>
+                <a href="/contact"> Contact </a>
+              </li>
+            </ul>
+          </nav>
+          {{ content }}
+          <footer>
+            <p>
+	      =============================
+            </p>
+            <p>
+                 Power by Github pages.
+            </p>
+          </footer>
+    </div>
+  </body>
+
+</html>
