--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,8 @@
           </nav>
           {{ content }}
 
-    <script src="{{ site.baseurl }}/JS/google-code-prettify/run_prettify.js"></script>
+    /* * *<script src="{{ site.baseurl }}/JS/google-code-prettify/run_prettify.js"></script> * * */
+          <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
