--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,23 +2,28 @@
 <html>
   <head>
     <meta charset=utf-8 />
-    <title>
-       {% if page.title %} {{ page.title }} | {% endif %} 
-    </title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/CSS/style.css" media="screen" />
+    <title>{% if page.title %} {{ page.title }} | {% endif %}</title>
   </head>
 
   <body>
-    <div id="main">
-      <header>
-        <h1>
-          <a href="{{site.baseurl }}/index.html"> {{ site.blogname }} </a>
-        </h1>
-        <header>
-          {{ content }}
- 
+  <div id="page">
+    <div id="header">
+        <ul class="nav">
+        <li><a href="/index.html"> {{ site.blogname }} </a></li>
+        <li><a class="about" href="/about.html">关于</a></li>
+        </ul>
     </div>
-    {{ site.copywrite }}  
+
+    <div id="main">
+          {{ content }}
+    </div>
+
+    <div id="footer">
+        <p>Power By Github Page</p>
+    </div>
+
+  </div>
   </body>
 
 </html>
