--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,12 +10,19 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 }
+#main {
+	background-color: #FFFFFF;
+	border: 1px solid #CCCCCC;
+	padding: 2em 6.5% 2em 6.5%; 
+	margin: 0px 0px auto 0px;                 
+	box-shadow: 2px 2px 10px #aaa;
+}
 #header{
 	color: gray;
 	font-size:1.6em;
 	position: relative;
 	padding: 0 0 0 0; 
-	margin: 0.5em 50px -5px 50px;                 
+	margin: 0.5em 50px -7px 50px;                 
 	height:1.5em;
 	/*border: 1px solid black;
         */
@@ -25,8 +32,6 @@ body {
 	position: absolute;
 	top: 0;
 	right: 0;
-	font-size: 100%;
-	line-height: 1.6em;
 	display: block;
 	margin: 0;
 	width: 50%;
@@ -38,8 +43,11 @@ body {
 	display: inline;
 }
 #header ul li a:hover {
-	color: blue;
 	border-bottom: 2px solid blue;
+        text-decoration:none;
+}
+#header ul li a:visited {
+	border-bottom: 2px solid red;
         text-decoration:none;
 }
 #header .byline {
@@ -49,30 +57,20 @@ body {
 }
 #header:hover .byline a { color: silver; text-shadow: none; }
 #header:hover .byline a:hover { color: black; text-shadow: #aaa 1px 1px 2px;}
-#main {
-	background-color: #FFFFFF;
-	border: 1px solid #CCCCCC;
-	padding: 2em 6.5% 2em 6.5%; 
-	margin: 0px 5px auto 5px;                 
-	box-shadow: 2px 2px 10px #aaa;
-}
-/*
-#footer{
-	background-color: #333333;
-	color: gray;
-	padding: 0 0 0 0; 
-	margin: 5em 0 0 0;                 
-	position:absolute;
-	left:0;
-	right:0;
-	bottom:auto;
-}
-*/
 a:link { color: blue;}
 a:visited{ color: red;}
 a:hover { text-decoration:underline;}
 a:active {text-decoration:underline;}
 a {text-decoration:none;}
+
+/* typography.css */
+h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#111;}
+h1 {font-size:1.4em;line-height:1;margin-bottom:0.5em;}
+h2 {font-size:1.3em;margin-bottom:0.75em;}
+h3 {font-size:1.2em;line-height:1;margin-bottom:1em;}
+h4 {font-size:1.1em;line-height:1.25;margin-bottom:1.25em;}
+h5 {font-size:1em;font-weight:bold;margin-bottom:1.5em;}
+h6 {font-size:1em;font-weight:bold;}
 /* -----------------------------------------------------------------------
 
 
@@ -86,12 +84,16 @@ a {text-decoration:none;}
 
 ----------------------------------------------------------------------- */
 
+/*
+#footer{
+	background-color: #333333;
+	color: gray;
+	padding: 0 0 0 0; 
+	margin: 5em 0 0 0;                 
+	position:absolute;
+	left:0;
+	right:0;
+	bottom:auto;
+}
+*/
 
-/* typography.css */
-h1, h2, h3, h4, h5, h6 {font-weight:normal;color:#111;}
-h1 {font-size:1.4em;line-height:1;margin-bottom:0.5em;}
-h2 {font-size:1.3em;margin-bottom:0.75em;}
-h3 {font-size:1.2em;line-height:1;margin-bottom:1em;}
-h4 {font-size:1.1em;line-height:1.25;margin-bottom:1.25em;}
-h5 {font-size:1em;font-weight:bold;margin-bottom:1.5em;}
-h6 {font-size:1em;font-weight:bold;}
