add baidu analytics code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,4 +37,9 @@
 
 </script>
 
+<script type="text/javascript">
+var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb256a515de4d09a354567784cc5163ac' type='text/javascript'%3E%3C/script%3E"));
+</script>
+
 </html>
