--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset=utf-8 />
-    <link rel="stylesheet" href="/CSS/style.css" media="screen" />
-    <title>{% if page.title %} {{ page.title }} | {% endif %}</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="/style/style.css" media="screen" />
+    <meta name="copyright" content="{{ site.url }}" />
+    <meta name="keywords" content="{{ page.keywords }}" />
+    <meta name="description" content="{{ site.description }}" />
+    <title>{% if page.title %}{{ page.title }} | {% endif %}</title>
   </head>
 
   <body>
-  <div id="page">
+  <div id="page" class="background">
     <div id="header">
-        <ul class="nav">
-        <li><a href="/index.html"> {{ site.blogname }} </a></li>
-        <li><a class="about" href="/about.html">关于</a></li>
+        <div id="header_menu">
+        <ul id="css3menu">
+        <li class="topitem"><a href="/index.html"> 文章列表 </a></li>
+        <li class="topitem"><a  href="/about.html">关于本站</a></li>
         </ul>
+        </div>
+
     </div>
 
     <div id="main">
@@ -20,10 +26,12 @@
     </div>
 
     <div id="footer">
-        <p>Power By Github Page</p>
+	<br>
+        使用资源：<a href="http://pages.github.com/">Github Page</a><br>
     </div>
 
-  </div>
   </body>
+<script src="/js/analytics.js"></script>
 
+</div>
 </html>
