my first blog a halt over

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
     </div>
 
     <div id="main">
+        <h1>{% if page.title %}{{ page.title }} | {% endif %}</h1>
+	 <p>{{ page.description }}</p>
           {{ content }}
     </div>
 
