--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@ layout: page
 ---
 
 {{ content }}  
-
+<script>
+	codes = document.getElementsByTagName("pre");
+	codes[0].className = 'prettyprint linenums';
+</script>
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
 
