disable googlehighlight code and added style for pre tag on style.css

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: page
 ---
 
 {{ content }}  
-<script>
+<!--script>
 	codes = document.getElementsByTagName("pre");
 	codes[0].className = 'prettyprint linenums';
-</script>
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+</script-->
+<!--script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script-->
 
