--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,17 +2,21 @@
 layout: default
 ---
   {{ content }}
+    <div id="comment">
     <div id="disqus_thread">
     <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'goodbai'; // required: replace example with your forum shortname
+	document.write('<input type="button" id="load_comment" value="评论>>" onclick=load_disqus() />');
+	//dis = document.getElementById("disqus_thread")
+	//dis.style.display="block";   
 
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
+	function load_disqus(){
+		var disqus_shortname = 'goodbai'; 
+		(function() {
+		    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+		    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+		    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+		})();
+	}
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    </div>
  </div>
