commit but build have error.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,14 @@
     <div id="header">
         <div id="header_menu">
         <ul id="css3menu">
-        <li class="topitem"><a href="/index.html"> 文章列表 </a></li>
-        <li class="topitem"><a  href="/about.html">关于本站</a></li>
+        <li class="topitem"><a href="/index.html"> 首页 </a></li>
+        <li class="topitem"><a  href="/about.html">关于我</a></li>
         </ul>
         </div>
 
     </div>
 
     <div id="main">
-        <h1>{% if page.title %}{{ page.title }} | {% endif %}</h1>
-	 <p>{{ page.description }}</p>
           {{ content }}
     </div>
 
