--- a/style/style.css
+++ b/style/style.css
@@ -35,20 +35,18 @@ body {
 	line-height: 200%;
         font-size:100%;
 	font-family: Palatino, georgia, "times new roman", "宋体";
-	background-color: rgb(178, 221, 202);
+	background-color: rgb(219, 223, 224);
 }
 /**page 页面包含header/main/footer*/
 #page{
-/*
-	width: 800px;
-*/
+	width: 900px;
 	margin-left: auto;
 	margin-right: auto;
 }
 #header{
 	margin-top: 2em;
 	font-size:1.3em;
-	padding-left: 6.5%;
+	padding-left: 7%;
 }
 
 #header a:hover {
@@ -75,7 +73,7 @@ body {
 #main {
 	background-color: #FFFFFF;
 	border: 1px solid #CCCCCC;
-	padding: 2em 30% 2em 5%; 
+	padding: 2em 7% 2em 7%; 
 	margin: 0 0 0 0;                 
 /*	box-shadow: 2px 2px 10px #aaa;
 */
@@ -97,7 +95,7 @@ body {
 #footer{
 	color: gray;
 	font-size: 80%;
-	padding-left: 6.5%;
+	padding-left: 7%;
 }
 /* 其他配置 */
 #comment {
@@ -115,8 +113,23 @@ body {
 }
 
 pre {
-	margin: 0.5em auto 0.5em 0;
-	padding: 0 0.5em 0 0.5em;
+	padding: 0.5em 0 0.5em 0.5em;
 	border: 1px solid #CCCCCC;
 	line-height: 180%;
+	background-color: rgb(250, 250, 231);
+	margin: 1em auto 1em 0;
+	box-shadow: 1px 1px 6px #ccc;
 }
+
+
+
+/*backup */
+/*
+.emphnext + p:first-letter, p.emphfirst:first-letter {
+	font-size: 48px;
+	padding: 0 0.15em 0 0;
+	margin:  0.05em 0 -0.15em 0;
+	line-height: 1em;
+	float: left;
+}
+*/
