--- a/style/style.css
+++ b/style/style.css
@@ -22,9 +22,13 @@ a:hover { text-decoration:underline;}
 a:active {text-decoration:underline;}
 a {text-decoration:none;}
 
-h1, h2, h3, h4, h5, h6 {font-weight:bolder;}
-h1 {font-size:1.5em;margin-top:1.2em;margin-bottom:1.2em;}
-h2 {font-size:1.4em;margin-top:1.1em;margin-bottom:1.1em;}
+h1, h2, h3, h4, h5, h6 {
+	font-weight:bolder;
+	padding-top:1em;
+	padding-bottom:0;
+}
+h1 {font-size:1.4em;margin-top:1em;margin-bottom:1.2em;}
+h2 {font-size:1.4em;margin-top:1.5em;margin-bottom:1.1em;border-bottom: 2px solid rgb(219, 223, 224);}
 h3 {font-size:1.3em;margin-top:1.0em;margin-bottom:1.0em;}
 h4 {font-size:1.2em;margin-top:0.9em;margin-bottom:0.9em;}
 h5 {font-size:1.1em;margin-top:0.8em;margin-bottom:0.8em;}
@@ -111,25 +115,32 @@ body {
 	padding-left: 1em;
 	color: gray;
 }
+.bolg_desc_in {
+	background-color: rgb(228, 228, 149);
+	margin-bottom: 3em;
+	margin-left: -1em;
+	margin-right: -1em;
+	padding: 1em;
+	padding-left: 2em;
+	padding-right: 2em;
+}
 
 pre {
 	padding: 0.5em 0 0.5em 0.5em;
 	border: 1px solid #CCCCCC;
 	line-height: 180%;
-	background-color: rgb(250, 250, 231);
-	margin: 1em auto 1em 0;
+	background-color: rgb(247, 247, 178);
+	margin: 1.25em auto 1.25em 0;
 	box-shadow: 1px 1px 6px #ccc;
 }
 
 
 
-/*backup */
-/*
-.emphnext + p:first-letter, p.emphfirst:first-letter {
-	font-size: 48px;
+/*首行首字大写 */
+.bolg_desc_in + p:first-letter {
+	font-size: 3em;
 	padding: 0 0.15em 0 0;
 	margin:  0.05em 0 -0.15em 0;
 	line-height: 1em;
 	float: left;
 }
-*/
