rename _posts/2013-08-05-UseGoagentCrossTheFireWall.md -> _posts/2013-08-05-WhyLANSoInsecure.md  added how to deal with attack in LAN and so on

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,9 @@ layout: page
 		<br><b>发表：</b>{{page.date  | date_to_string }}
 	</i></div>
 
+	<div id="index">
+	</div>
+
 	{{ content }}  
 </div>
 <!--script>
