--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/style/style.css" media="screen" />
     <meta name="copyright" content="{{ site.url }}" />
     <meta name="keywords" content="{{ page.keywords }}" />
-    <meta name="description" content="{{ site.description }}" />
+    <meta name="description" content="{{ page.description }}" />
     <title>{% if page.title %}{{ page.title }} | {% endif %}</title>
   </head>
 
