--- a/style/style.css
+++ b/style/style.css
@@ -126,13 +126,19 @@ body {
 }
 
 pre {
-	padding: 0.5em 0 0.5em 0.5em;
+	padding: 0.75em 0 0.75em 0.5em;
 	border: 1px solid #CCCCCC;
-	line-height: 180%;
+	line-height: 140%;
 	background-color: rgb(247, 247, 178);
-	margin: 1.25em auto 1.25em 0;
+	margin: 1.25em auto 1.5em 0;
 	box-shadow: 1px 1px 6px #ccc;
 }
+/*
+code {
+	border: 1px solid #CCCCCC;
+	background-color: rgb(247, 247, 178);
+}
+*/
 
 
 
