--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,12 +3,12 @@ layout: page
 ---
 <div id="post">
 	<h1>{% if page.title %}{{ page.title }} | {% endif %}</h1>
-	<div class="bolg_desc_in"><i>
+	<div class="bolg_desc_in">
 		<b>摘要: </b>{{ page.description }}
 		<br><b>作者：</b><a href="/">Goodbai</a>
 		<br><b>原文：</b><a href='{{page.url}}'>地址</a>
 		<br><b>发表：</b>{{page.date  | date_to_string }}
-	</i></div>
+	</div>
 
 
 	{{ content }}  
