--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: page
 <script type="text/javascript" id="bdshare_js" data="type=tools&amp;uid=6791596" ></script>
 <script type="text/javascript" id="bdshell_js"></script>
 <script type="text/javascript">
-	document.write('<input type="button" id="load_sharebar" value="分享>>" onclick=load_sharebar() />');
+	document.write('<input class="manual_load" type="button" id="load_sharebar" value="分享>>" onclick=load_sharebar() />');
 	function load_sharebar(){
 		//disable "load_sharebar" visible
 		aa = document.getElementById("load_sharebar");
