added about.html page

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,10 @@
 layout: default
 ---
   {{ content }}
+
 <div id="disqus_thread">
 <script type="text/javascript">
-	document.write('<input type="button" id="load_comment" class="manual_load" value="评论>>" onclick=load_disqus() />');
+	document.write('<input type="button" id="load_comment" class="manual_load" value="展开评论>>" onclick=load_disqus() />');
 	//dis = document.getElementById("disqus_thread")
 	//dis.style.display="block";   
 
