--- a/style/style.css
+++ b/style/style.css
@@ -2,9 +2,19 @@
 /*自适应屏幕*/
 <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
 img, object { max-width: 100%;}
+
 /*  手持设备时启用  */
 /*
-@media screen and (max-device-width: 600px) {
+/**page 页面包含header/main/footer*/
+@media screen and (min-device-width: 901px) {
+
+	#page{
+		width: 900px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
+@media screen and (max-device-width: 900px) {
 	#page{
 		width: auto;
 		margin-left: auto;
@@ -44,12 +54,6 @@ body {
 	font-family: Palatino, georgia, "times new roman", "宋体";
 	background-color: rgb(219, 223, 224);
 }
-/**page 页面包含header/main/footer*/
-#page{
-	width: 900px;
-	margin-left: auto;
-	margin-right: auto;
-}
 #header{
 	margin-top: 2em;
 	font-size:1.3em;
@@ -80,7 +84,7 @@ body {
 #main {
 	background-color: #FFFFFF;
 	border: 1px solid #CCCCCC;
-	padding: 2em 7% 2em 7%; 
+	padding: 1em 7% 2em 7%; 
 	margin: 0 0 0 0;                 
 /*	box-shadow: 2px 2px 10px #aaa;
 */
