--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/style/style.css" media="screen" />
+    <link media="screen" rel="stylesheet" href="/style/style.css" />
     <meta name="copyright" content="{{ site.url }}" />
     <meta name="keywords" content="{{ page.keywords }}" />
     <meta name="description" content="{{ page.description }}" />
