refine style for handheld 2

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link media="screen" rel="stylesheet" href="/style/style.css" />
+    <!--自适应屏幕-->
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
+    <link media="all" rel="stylesheet" href="/style/style.css" />
     <meta name="copyright" content="{{ site.url }}" />
     <meta name="keywords" content="{{ page.keywords }}" />
     <meta name="description" content="{{ page.description }}" />
