header background change to black style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,8 @@ layout: page
 	<div class="blog_desc_in">
 		<b>摘要: </b>{{ page.description }}
 		<br><b>作者：</b><a href="/">Goodbai</a>
-		<br><b>原文：</b><a href='{{page.url}}'>地址</a>
-		<br><b>发表：</b>{{ page.date|date:"%Y-%m-%d" }}
+		<b>| 原文：</b><a href='{{page.url}}'>地址</a>
+		<b>| 发表：</b>{{ page.date|date:"%Y-%m-%d" }}
 	</div>
 
 	{% if page.postimg_b %}
