--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,8 @@
 		padding-right: 7%;
 	}
 	#header{
-		margin-top: 2em;
+	/*	margin-top: 2em;
+	*/
 	}
 	.blog_desc_in {
 		margin-left: -1em;
@@ -88,20 +89,37 @@ body {
 }
 #header{
 	font-size:1.3em;
-	padding-top: 0;
-	margin-bottom: 0.1em;
+	margin-bottom: 1.2em;
+	padding-top: 0.35em;
+	padding-bottom: 0.25em;
+/*
+	filter: alpha(opacity=100 finishopacity=50 style=1 startx=0,starty=0,finishx=0,finishy=150) progid:DXImageTransform.Microsoft.gradient(startcolorstr=red,endcolorstr=blue,gradientType=0);
+	-ms-filter: alpha(opacity=100 finishopacity=50 style=1 startx=0,starty=0,finishx=0,finishy=150) progid:DXImageTransform.Microsoft.gradient(startcolorstr=red,endcolorstr=blue,gradientType=0);
+	background: gray;
+	background: -moz-linear-gradient(top, red, rgba(0, 0, 255, 0.5));
+	background: -webkit-gradient(linear, 0 0, 0 bottom, from(#FFFFFF), to(rgba(7, 7, 7, 0.5)));
+	background: -o-linear-gradient(top, red, rgba(0, 0, 255, 0.5));
+*/
+	border-bottom: 1px solid #2d2d2d;
+	background-color: #2d2d2d;
 }
 #header a:hover {
         text-decoration:none;
-	color: rgb(15, 8, 199);
+	color: white;
 }
-#header a { color: black;}
+#header a { color: #ccc;}
+
+#header td {
+	padding-right: 0.5em;
+}
 #header li {
 	display: inline;
 	margin-right: 0.5em;
 }
 #header .current {
+/*
 	border-bottom: 3px solid rgb(15, 8, 199);
+*/
 }
 #header #goodbai {
 	float: right;
