--- a/style/style.css
+++ b/style/style.css
@@ -79,7 +79,7 @@ a:active {text-decoration:underline;}
 a {text-decoration:none;}
 
 h1, h2, h3, h4, h5, h6 {font-weight:normal;padding-top:1em;padding-bottom:0;}
-h2{font-weight:bolder;}
+h2,h3,h4{font-weight:bolder;}
 h1 {font-size:1.4em;margin-top:1em;margin-bottom:1.2em;}
 h2 {font-size:1.4em;margin-top:2em;margin-bottom:1.1em;border-bottom: 2px solid rgb(219, 223, 224);}
 h3 {font-size:1.2em;margin-top:1.0em;margin-bottom:1.0em;}
