refine 2013-12-30-UseForecastAndPMDataAPI.md BUG and added code block auto scroll

--- a/style/style.css
+++ b/style/style.css
@@ -232,6 +232,9 @@ pre {
 	line-height: 140%;
 	background-color: rgb(247, 247, 178);
 	margin: 1.25em auto 1.5em auto;
+	overflow: auto; 
+	width: 100%; 
+	font-size:80%;
 }
 /*
 code {
