--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,9 @@
         <div id="header_menu2">
         <table >
 		<tr>
+		<td>
+		<a href="/"> <img src="/images/about/blog_LOGO_225x150.png" id="blogLOGO"  style= "display:inline" height="75"></a>
+		</td>
 		<td name="home" ><a href="/index.html">首页</a></td>
 		<td name="about"><a  href="/about.html">关于</a></td>
 		</tr>
