--- a/style/style.css
+++ b/style/style.css
@@ -237,7 +237,7 @@ pre {
 	margin: 1.25em auto 1.5em auto;
 	overflow: auto; 
 	width: 100%; 
-	font-size:80%;
+	font-size:85%;
 }
 /*
 code {
@@ -280,4 +280,9 @@ p {
 	padding-bottom: 1em;
 	margin-bottom: 2em;
 	border-bottom: 1px solid rgb(219, 223, 224);
+}
+blockquote {
+	border-left: 4px solid #DDD;
+	padding: 0 15px;
+	color: #777;
 }
