--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <table >
 		<tr>
 		<td>
-		<a href="/"> <img src="/images/about/blog_LOGO_225x150.png" id="blogLOGO"  style= "display:inline" height="75"></a>
+		<a href="/"> <img src="/images/about/blog_LOGO_225x150.png" id="blogLOGO"  style= "display:inline" height="70"></a>
 		</td>
 		<td name="home" ><a href="/index.html">首页</a></td>
 		<td name="about"><a  href="/about.html">关于</a></td>
@@ -41,8 +41,9 @@
     </div>
 
     <div id="footer">
-	<br>
-        使用资源：<a href="http://pages.github.com/">Github Page</a><br>
+	<br>合作站点：
+		<a href="http://pages.github.com/" target="_blank">Github Page</a> | 
+		<a href="http://tiny4cocoa.com/" target="_blank">Tiny4Cocoa</a>
     </div>
 
   </body>
