--- a/style/style.css
+++ b/style/style.css
@@ -93,6 +93,8 @@ body {
         font-size:100%;
 	font-family: Palatino, georgia, "times new roman", "宋体";
 	background-color: #e8e8e8;
+	word-wrap: break-word;
+	word-break: normal;
 /*
 	background: -webkit-linear-gradient(left, #dfeead 12%,#ebf8c2 36%,#ebf8c2 62%,#dfeead 95%);
 */
