added chinaunix blog link in headline

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
 		<a href="/"> <img src="/images/about/blog_LOGO_225x150.png" id="blogLOGO"  style= "display:inline" height="70"></a>
 		</td>
 		<td name="home" ><a href="/index.html">首页</a></td>
+		<td name="home" ><a target="_blank" href="http://blog.chinaunix.net/uid/21123336.html">CU博客</a></td>
 		<td name="about"><a  href="/about.html">关于</a></td>
 		</tr>
         </table>
