change body's font color to #494949

--- a/style/style.css
+++ b/style/style.css
@@ -95,6 +95,7 @@ body {
 	background-color: #e8e8e8;
 	word-wrap: break-word;
 	word-break: normal;
+	color: #494949;
 /*
 	background: -webkit-linear-gradient(left, #dfeead 12%,#ebf8c2 36%,#ebf8c2 62%,#dfeead 95%);
 */
