--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,14 @@
     </div>
 
   <div id="page" class="background">
-
+    <div id="sidebar" >
+        <div id="me" >
+         	<p>自我介绍 </p>
+        </div>
+        <div id="list" >
+         	<p>文章列表 </p>
+        </div>
+    </div>
     <div id="main">
           {{ content }}
     </div>
