--- a/style/style.css
+++ b/style/style.css
@@ -92,7 +92,7 @@ a {text-decoration:none;}
 h1, h2, h3, h4, h5, h6 {font-weight:normal;padding-top:1em;padding-bottom:0;}
 h2,h3,h4{font-weight:bolder;}
 h1 {font-size:1.4em;margin-top:1em;margin-bottom:1.2em;}
-h2 {font-size:1.4em;margin-top:2em;margin-bottom:1.1em;border-bottom: 2px solid green;}
+h2 {font-size:1.4em;margin-top:2em;margin-bottom:1.1em;border-bottom: 3px solid green;}
 h3 {font-size:1.2em;margin-top:1.0em;margin-bottom:1.0em;}
 h4 {font-size:1.1em;margin-top:0.9em;margin-bottom:0.9em;}
 h5 {font-size:1.1em;margin-top:0.8em;margin-bottom:0.8em;}
@@ -137,16 +137,14 @@ body {
 #header a { color: #ccc;}
 
 #header td {
-	padding-right: 0.5em;
+	padding: 0 1em 0 1em;
 }
 #header li {
 	display: inline;
 	margin-right: 0.5em;
 }
 #header .current {
-/*
-	border-bottom: 3px solid rgb(15, 8, 199);
-*/
+	border-bottom: 4px solid green;
 }
 #header #goodbai {
 	float: right;
@@ -243,7 +241,7 @@ Matched CSS Rules
 
 
 pre {
-	padding: 0.75em 0 0.75em 0.5em;
+	padding: 0.75em 0.5em 0.75em 0.5em;
 	border: 1px solid #CCCCCC;
 	line-height: 140%;
 	background-color: rgb(247, 247, 178);
