added subscribtion weibo button support

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,7 @@ layout: default
 	//dis = document.getElementById("disqus_thread")
 	//dis.style.display="block";   
 
+	load_disqus();
 	function load_disqus(){
 		//to load button disivisible
                 aa = document.getElementById("load_comment");
