--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<html xmlns:wb="http://open.weibo.com/wb">>
+<html xmlns:wb="http://open.weibo.com/wb">
   <head>
     <meta charset="utf-8" />
     <!--自适应屏幕-->
@@ -40,7 +40,7 @@
     <div id="sidebar" >
         <div id="me" >
 		<img src="/images/melogo-100.png" width="90">
-		<span id="subWB" ><wb:follow-button uid="2991975565" type="red_1" width="67" height="24" ></wb:follow-button></span>
+		<span id="subWB" ><wb:follow-button uid="2991975565" type="red_1" width="90" height="24" ></wb:follow-button></span>
         </div>
     </div>
     <div id="main">
